<resources>
    <string name="app_name">SwitchWifi</string>
    <string name="action_settings">Settings</string>
    <string name="bbsdi">BBSDI: </string>
    <string name="strength">Strength: </string>
    <string name="buttonTextWifi">Select Wifi OK</string>
    <string name="selectFavWifi">Select Favorites WIFI:</string>
    <string name="listFavWifi">List of Favorites Wifi:</string>
    <string name="favWifi">Favorites Wifi</string>
    <string name="currentWifi">Current Wifi Info.</string>
    <string name="preference_file_key">SharedPreferencesWifi</string>
    <string name="isWifiConnecting">IsWifiConnecting</string>
    <string name="wifiOK">wifiSelect</string>
    <string name="closeApp">closeApp</string>
    <string name="logApp">logApp</string>
    <string name="setting">Setting</string>

    <string name="setting_WifiTime">Check wifi every second</string>
    <string name="setting_WifiTime_summary">Select a frequency in second to check wifi connect </string>
    <string name="setting_WifiTime_key">settingWifiTimeKey</string>

    <string name="setting_WifiInternetTime">Check Internet every second</string>
    <string name="setting_WifiInternetTime_summary">Select a frequency in second to check wifi favorite´s internet </string>
    <string name="setting_WifiInternetTime_key">settingWifiInternetTimeKey</string>


    <string name="setting_checkAppRun">Check app. is running every hours.</string>
    <string name="setting_checkAppRun_summary">Select a frequency in hours to check application is running</string>
    <string name="setting_checkAppRun_key">settingAppRunningKey</string>

    <string name="setting_enableAppRun">Check app. is running</string>
    <string name="setting_enableAppRun_summary">Sometime android OS kill the app</string>
    <string name="setting_enableAppRun_key">enableWifiTimeKey</string>

    <string name="setting_backButton">Back</string>
    <string name="setting_backButton_summary">Back to main screen</string>
    <string name="setting_backButton_key">backButtonKey</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="wifi_notification_title_template">Switch Wifi %1$s : %2$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="wifi_notification_placeholder_text_template">Done wifi internet on %1$s.
    </string>

    <string name="action_close">Off App.</string>
    <string name="action_open">On App.</string>

    <string name="wifi_on">ON </string>
    <string name="wifi_off">OFF </string>
    <string name="wifi_off_on_title">on/off App.</string>

    <string name="action_restart">Restart</string>
    <string name="action_status">Status</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about">About</string>
    <string name="title_about">About SwitchWifi App.</string>
    <string name="title_currentWifi">Current Wifi Information</string>
    <string name="message_about">This app was developed by  guilleApp@ and its use is free for everyone! </string>
    <string name="dismiss_about">Dismiss</string>
    <string name="ready">Done</string>
    <string name="settingFragment">SettingFragment</string>
    <string name="wifiConnectionInfo">-bSSID:-c%1$s -l -bIP:-c%2$s -l -bMAC:-c%3$s -l -bStrenght:-c%4$d -l </string>
    <string name="mainFragment">mainFragment</string>

</resources>
